# libvlcpp-repro

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
libvlc_sdk/lib/: libvlc.def  libvlc.exp  libvlc.lib  libvlccore.def  libvlccore.exp  libvlccore.lib
